[Feat/#5] 개발 서버 RDS 연동 (#6)
* [Feat/#5] dev 환경 RDS 파일 작성

* [Feat/#5] DB 연결 확인 API 개발

* [Feat/#5] profile 환경변수 설정

* [Feat/#5] workflows 스크립트 profile 환경변수 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 spring:
   profiles:
-    active: local
+    active: ${SPRING_PROFILES_ACTIVE}
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 100
+        dialect: org.hibernate.dialect.MySQLDialect
