[Feat/#7] Spring Security, Oauth2, JWT 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,12 @@ dependencies {
 
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+
+    // auth
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+
 }
 
 tasks.named('test') {
