--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,28 +10,12 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100
         dialect: org.hibernate.dialect.MySQLDialect
-  
-  security:
-    oauth2:
-      client:
-        registration:
-          kakao:
-            client-id: ${KAKAO_CLIENT_ID}
-            client-secret: ${KAKAO_CLIENT_SECRET}
-            redirect-uri: ${KAKAO_REDIRECT_URI}
-            authorization-grant-type: authorization_code
-            client-authentication-method: client_secret_post
-            client-name: Kakao
-            scope:
-              - profile_nickname
-              - account_email
 
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
+oauth:
+  kakao:
+    base-url: ${KAKAO_BASE_URL}
+    app-key: ${KAKAO_APP_KEY}
+
 
 jwt:
   secret: ${JWT_SECRET}
