--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -1,19 +1,14 @@
 name: Easybud dev CI/CD
 
 on:
-  push:
-    branches:
-      - develop
   pull_request:
     types: [ closed ]
-    branches:
-      - develop
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: (github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop')
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop'
 
     steps:
       - name: Checkout
