[Feat/#43] Slack API 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     // p5spy
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 
+    // slack
+    implementation 'com.slack.api:slack-api-client:1.28.0'
+
 }
 
 tasks.named('test') {
