--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,3 +4,8 @@ spring:
     username: ${RDS_USERNAME}
     password: ${RDS_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+slack:
+  token: ${SLACK_TOKEN_DEV}
+  channel:
+    monitor: '#server-error-dev'
