--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,11 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
+
+springdoc:
+  swagger-ui:
+    groups-order: desc
+    tags-sorter: alpha
+    operations-sorter: method
+    disable-swagger-default-url: true
+    display-request-duration: true
