[Feat/#60] Redis 관련 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,11 +11,15 @@ spring:
         default_batch_fetch_size: 100
         dialect: org.hibernate.dialect.MySQLDialect
 
+  data:
+    redis:
+      host: ${REDIS_HOSTNAME}
+      port: ${REDIS_PORT}
+      
 oauth:
   kakao:
     base-url: ${KAKAO_BASE_URL}
     app-key: ${KAKAO_APP_KEY}
-
 
 jwt:
   secret: ${JWT_SECRET}
