--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,12 @@ dependencies {
     // slack
     implementation 'com.slack.api:slack-api-client:1.28.0'
 
+    // QueryDSL
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 }
 
 tasks.named('test') {
@@ -75,4 +81,8 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 
+}
+
+clean {
+    delete file('src/main/generated')
 }
